force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__ContainerDamageType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerDamageType__c</fullName>
    <label>Container Damage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerDamageType</valueSetName>
    </valueSet>
</CustomField>