force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__ContainerInTransportation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerInTransportation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Transportation</label>
    <referenceTo>clofor_com_cfs__Container_Info__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <type>Lookup</type>
</CustomField>