force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__COST_FOR_REPAIR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__COST_FOR_REPAIR__c</fullName>
    <label>COST FOR REPAIR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>