force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__DATE_OF_REPAIR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DATE_OF_REPAIR__c</fullName>
    <label>DATE OF REPAIR</label>
    <type>Date</type>
</CustomField>