force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__Facility__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <type>Lookup</type>
</CustomField>