force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__NEXT_REPAIR_SHEDULE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NEXT_REPAIR_SHEDULE__c</fullName>
    <label>NEXT REPAIR SHEDULE</label>
    <type>Date</type>
</CustomField>