force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__RAMStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RAMStatus__c</fullName>
    <label>RAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RepairMaintenanceStatus</valueSetName>
    </valueSet>
</CustomField>