force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__RepairMaintenanceCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RepairMaintenanceCategory__c</fullName>
    <label>REPAIR &amp; MAINTENANCE CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RepairMaintenanceCategory</valueSetName>
    </valueSet>
</CustomField>