force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__TROUBLE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TROUBLE_TYPE__c</fullName>
    <label>TROUBLE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Punk</fullName>
            </value>
            <value>
                <fullName>Engine trouble</fullName>
            </value>
            <value>
                <fullName>Shassi broken</fullName>
            </value>
            <value>
                <fullName>No oil</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>