force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/fields/clofor_com_cfs__TRUCK_FLEET__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TRUCK_FLEET__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK &amp; FLEET</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipName>MAINTENANCE_REPAIR</relationshipName>
    <type>Lookup</type>
</CustomField>