force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/recordTypes/clofor_com_cfs__Cargo.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Cargo</fullName>
    <active>true</active>
    <label>Cargo</label>
</RecordType>