force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/recordTypes/clofor_com_cfs__ContainerInTransportation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ContainerInTransportation</fullName>
    <active>true</active>
    <label>Container in Transportation</label>
</RecordType>