force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/recordTypes/clofor_com_cfs__Facility.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Facility</fullName>
    <active>true</active>
    <label>Facility</label>
</RecordType>