force-app/main/default/objects/clofor_com_cfs__MAINTENANCE_REPAIR__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__TRUCK_FLEET__c</columns>
    <columns>clofor_com_cfs__REPAIR_FACTORY__c</columns>
    <columns>clofor_com_cfs__TYPE_REASON__c</columns>
    <columns>clofor_com_cfs__TROUBLE_TYPE__c</columns>
    <columns>clofor_com_cfs__TYPE_OF_REPAIR__c</columns>
    <columns>clofor_com_cfs__DATE_OF_REPAIR__c</columns>
    <columns>clofor_com_cfs__NEXT_REPAIR_SHEDULE__c</columns>
    <columns>clofor_com_cfs__COST_FOR_REPAIR__c</columns>
    <columns>clofor_com_cfs__P_I_C_OF_REPAIR_FACTORY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>